crates/ars-components/src/specialized/file_upload/snapshots/ars_components__specialized__file_upload__tests__file_upload_dropzone_idle_snapshot.snap
---
source: crates/ars-components/src/specialized/file_upload/tests.rs
expression: "snapshot_attrs(&api_for_state(State::Idle).dropzone_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "dropzone",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "file-upload",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "upload-label",
            ),
        ),
        (
            Id,
            String(
                "upload-dropzone",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
