crates/ars-components/src/specialized/file_upload/snapshots/ars_components__specialized__file_upload__tests__file_upload_hidden_input_default_snapshot.snap
---
source: crates/ars-components/src/specialized/file_upload/tests.rs
expression: "snapshot_attrs(&api_for_state(State::Idle).hidden_input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "file-upload",
            ),
        ),
        (
            Class,
            String(
                "ars-sr-input",
            ),
        ),
        (
            Id,
            String(
                "upload-input",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "file",
            ),
        ),
    ],
    styles: [],
}
